<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.gcolina.recreativappcangreesl.addAssets.AddAssetsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/tv_title_detail"
            android:textAllCaps="true"
            android:textColor="@color/subtitle_text"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/tv_image" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="153dp"
            android:layout_margin="20dp"
            app:cardCornerRadius="12dp">

            <ImageView
                android:id="@+id/ivAsset"
                android:layout_width="match_parent"
                android:layout_height="153dp"
                android:background="@drawable/billards_random" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tvTitleNameStore" />

        <TextView
            android:id="@+id/tvstore_name"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:background="#AEAAAA" />

        <TextView
            android:id="@+id/tvInstallationDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tvInstallationDate" />

        <TextView
            android:id="@+id/tvinstallation_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#AEAAAA"
            android:textSize="25sp"
            tools:text="21-11-2024" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tvTitleOwnerName" />

        <TextView
            android:id="@+id/tvOwnerName"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:background="#AEAAAA" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tvTitleOwnerPhone" />

        <TextView
            android:id="@+id/tvOwnerPhone"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:background="#AEAAAA" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/etOwnerEmail" />

        <TextView
            android:id="@+id/tvOwnerEmail"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:background="#AEAAAA"/>

        <TextView
            android:id="@+id/tvearnings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/etEarnings" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/title_date_Earnings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/titleTotalEarnings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/titleNetEarnings" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvEarnings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btnAddEarnings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_earning"/>

        <TextView
            android:id="@+id/tvTittleAlerts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tv_tittle_alerts" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAlerts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btnAddAlerts"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="@string/btn_add_alert" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnModifier"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_weight="1"
                android:text="@string/btn_modifier" />

            <Button
                android:id="@+id/btnUnInstall"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_weight="1"
                android:text="@string/btn_uninstall" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
