<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.gcolina.recreativappcangreesl.addAssets.AddAssetsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:text="Añadir maquina"
            android:textAllCaps="true"
            android:textColor="@color/subtitle_text"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_gravity="center_horizontal"
            android:id="@+id/tvImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tv_image" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="153dp"
            android:layout_margin="20dp"
            app:cardCornerRadius="12dp">
            <ImageView
                android:id="@+id/ivAsset"
                android:layout_width="match_parent"
                android:layout_height="153dp"
                android:background="@drawable/billards_random" />

        </androidx.cardview.widget.CardView>



        <TextView
            android:id="@+id/tvstore_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tvTitleNameStore" />

        <EditText
            android:id="@+id/etStoreName"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:maxLength="30"
            android:maxLines="1"
            android:hint="@string/etBarName" />


        <TextView
            android:id="@+id/tvInstallationDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tvInstallationDate" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvinstallation_date"
                android:layout_width="130dp"
                android:layout_height="51dp"
                android:textAlignment="center"
                android:textSize="25sp"
                android:background="#AEAAAA"
                tools:text="21-11-2024" />

            <Button
                android:id="@+id/btnCalendar"
                android:layout_width="60dp"
                android:layout_height="51dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/ic_calendar" />

            <Button
                android:id="@+id/btnNowCalendar"
                android:layout_width="wrap_content"
                android:layout_height="51dp"
                android:text="@string/btnNow" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvOwnerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tvTitleOwnerName" />

        <EditText
            android:id="@+id/etOwnerName"
            android:layout_width="match_parent"
            android:maxLength="30"
            android:maxLines="1"
            android:layout_height="51dp"
            android:hint="@string/tvTitleOwnerName" />

        <TextView
            android:id="@+id/tvOwnerPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tvTitleOwnerPhone" />

        <EditText
            android:id="@+id/etOwnerPhone"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:maxLength="11"
            android:maxLines="1"
            android:inputType="phone"
            android:hint="@string/tvTitleOwnerPhone" />

        <TextView
            android:id="@+id/tvOwnerEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/etOwnerEmail" />

        <EditText
            android:id="@+id/etOwnerEmail"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:layout_height="51dp"
            android:autofillHints="true"
            android:inputType="textEmailAddress"
            android:hint="@string/etOwnerEmail" />

        <TextView
            android:id="@+id/tvearnings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/etEarnings" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/title_date_Earnings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/titleTotalEarnings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/titleNetEarnings" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvEarnings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etTotalEarnings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="number"
                android:layout_weight="1"
                android:hint="@string/total_earning" />

            <EditText
                android:id="@+id/etNetEarnings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="number"
                android:layout_weight="1"
                android:hint="@string/net_earnings" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvTittleAlerts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tv_tittle_alerts" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tvAlerts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/etAlert"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:gravity="top|start"
            android:hint="@string/hint_et_alert" />
        <Button
            android:id="@+id/btnAddAlerts"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="@string/btnAddEarning" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_weight="1"
                android:text="@string/btn_save" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_weight="1"
                android:text="@string/btn_cancel" />

            <Button
                android:id="@+id/btnUnInstall"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_weight="1"
                android:text="@string/btn_uninstall" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>