<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".detail.DetailActivity">

    <ImageView
        android:id="@+id/ivAsset"
        android:layout_width="match_parent"
        android:layout_height="153dp"
        android:background="@drawable/billar_random" />

    <!--                                               -->

    <TextView
        android:id="@+id/tvBarName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tvNameStore" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:hint="@string/etBarName" />


    <TextView
        android:id="@+id/tvInstallationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tvInstallationDate" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="130dp"
            android:layout_height="51dp"
            android:textSize="25sp"
            tools:text="21-11-2024" />

        <Button
            android:id="@+id/btnCalendar"
            android:layout_width="60dp"
            android:layout_height="51dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/ic_calendar" />

        <Button
            android:id="@+id/btnNow"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:text="@string/btnNow" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvOwnerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tvOwnerName" />

    <EditText
        android:id="@+id/etOwnerName"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:hint="@string/tvOwnerName" />

    <TextView
        android:id="@+id/tvOwnerPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tvOwnerPhone" />

    <EditText
        android:id="@+id/etOwnerPhone"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:hint="@string/tvOwnerPhone" />

    <TextView
        android:id="@+id/tvOwnerEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/etOwnerEmail" />

    <EditText
        android:id="@+id/etOwnerEmail"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:autofillHints="true"
        android:hint="@string/etOwnerEmail" />

    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/categories" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategoriesMachines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/tvearnings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/etEarnings" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/title_date_Earnings" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDateEarning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" />

            <!-- <TextView
                 android:id="@+id/tvDateEarning"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 tools:text="@string/title_date_Earnings" />-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/titleTotalEarnings" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTotalEarnings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/titleNetEarnings" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvNetEarnings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnAddEarning"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:text="@string/btnAddEarning" />

    <TextView
        android:id="@+id/tvTittleAlerts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tv_tittle_alerts" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tvAlerts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/btnAddAlerts"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:text="@string/btnAddEarning" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_weight="1"
            android:text="@string/btnAddEarning" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_weight="1"
            android:text="@string/btnAddEarning" />

        <Button
            android:id="@+id/btnUnInstall"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_weight="1"
            android:text="@string/btnAddEarning" />


    </LinearLayout>

</LinearLayout>