<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_app"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tvtittle_list_machine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/title_list_machines"
            android:textAllCaps="true"
            android:textColor="@color/subtitle_text"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tittle_categories"
            style="@style/subtitle_list_machines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/categories" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategoriesMachines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/tvsubtittle_list_machine"
            style="@style/subtitle_list_machines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/machines" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMachines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddMachine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:backgroundTint="@color/subtitle_text"
        android:src="@drawable/baseline_add_24"
        app:fabSize="normal"
        android:layout_gravity="end|bottom"/>
</FrameLayout>